<resources>
    <string name="app_name">FilmingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PMDM Listas de elementos</string>
    <string name="nav_header_subtitle">Grupo Studium</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FilmingApp</string>
    <string name="menu_pelicula">Películas</string>
    <string name="menu_serie">Series</string>

    // Principal
    <string name="txtPrincipal">A disfrutar!!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTitulo">título</string>
    <string name="director"><b>Director</b></string>
    <string name="reparto"><b>Reparto</b></string>
    <string name="sinopsis"><b>Sinopsis</b></string>
    <string name="temporadas"><b>Temporada</b></string>

    <string name="btnVolver">VOLVER</string>
</resources>